fix: corrige error de module is not defined en cssesc

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/cloudflare": "^12.6.0",
     "@astrojs/db": "^0.15.0",
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/node": "^9.2.2",
@@ -30,5 +31,6 @@
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.4",
     "@types/lodash.debounce": "^4.0.9"
-  }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
