--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check": "astro check",
     "preview": "astro preview",
     "astro": "astro",
-    "db:push": "npx astro db push --remote"
+    "db:push": "astro db push --remote"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
@@ -21,15 +21,15 @@
     "@astrojs/rss": "4.0.12",
     "@astrojs/sitemap": "3.4.1",
     "@astrojs/vue": "^5.1.0",
-    "@libsql/client": "^0.15.9",
+    "@libsql/client": "^0.15.8",
     "astro": "^5.10.1",
     "canvas-confetti": "^1.9.3",
     "lodash.debounce": "^4.0.8",
-    "typescript": "^5.8.3",
-    "vue": "^3.5.17"
+    "typescript": "^5.6.3",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.9.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/lodash.debounce": "^4.0.9"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
